--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,6 +6,6 @@ RUN mkdir /opt/server
 RUN chown expense:expense -R /opt/server
 WORKDIR /opt/server
 COPY package.json . 
-COPY *.js .
+COPY *.js /opt/server/
 RUN npm install
 CMD [ "node","index.js" ]
