--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,9 @@ services:
     image: mysql:v1.0.0
     container_name: mysql
     volumes:
-      - mysql:/var/lib/mysql
+      - source: mysql
+        target: /var/lib/mysql
+        type: volumes
   backend:
     image: backend:v1.0.0
     container_name: backend
