--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ volumes:
    external: true
 services:
   mysql:
-    image: mysql:v1.0.0
+    image: saikumar718/mysql:v1.0
     container_name: mysql
     environment:
       - MYSQL_ROOT_PASSWORD=ExpenseApp@1
@@ -19,13 +19,13 @@ services:
       target: /var/lib/mysql
       type: volume
   backend:
-    image: backend:v1.0.0
+    image: saikumar718/backend:v1.0
     container_name: backend
     command: sh -c "sleep 20 && node /opt/server/index.js"
     depends_on:
       - mysql
   frontend:
-    image: frontend:v1.0.0
+    image: saikumar718/frontend:v1.0
     container_name: frontend
     depends_on:
       - backend
